--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 
         <div id="login-view">
             <h2>Login</h2>
-            <input type="email" id="email-login" placeholder="Email" value="admin@gesselo.com">
-            <input type="password" id="senha-login" placeholder="Senha" value="123456">
+            <input type="email" id="email-login" placeholder="Email" value="garcom@admin.com">
+            <input type="password" id="senha-login" placeholder="Senha" value="#Kwaii2020">
             <button onclick="fazerLogin()">Entrar</button>
         </div>
 
@@ -932,3 +932,4 @@ async function imprimirNaCozinha() {
     </script>
 </body>
 </html>
+
